<resources>
    <string name="app_name">AmazingAppsTestTask</string>
    <string name="bottom_nav_search_label">Search</string>
    <string name="bottom_nav_favorite_label">Favorite</string>
    <string name="character_height_label">Height:</string>
    <string name="character_mass_label">Mass:</string>
    <string name="remove_btn_label">Remove</string>
    <string name="add_btn_label">Add</string>
    <string name="character_gender_label">Gender:</string>
    <string name="character_birth_year_label">Birth Year:</string>
    <string name="character_hair_color_label">Hair Color:</string>
    <string name="character_skin_color_label">Skin Color:</string>
    <string name="character_films_label">Films</string>
    <string name="director_label">Director:</string>
    <string name="release_date_label">Release:</string>
    <string name="search_character_hint">Search Character</string>
    <string name="load_state_retry_btn">Retry</string>
    <string name="favorite_fragment_label">Favorites</string>
    <string name="details_fragment_label">Character Info</string>
    <string name="search_fragment_label">Search Characters</string>
</resources>