<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CharacterDetailsFragment"

    android:background="?attr/colorPrimary">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="@dimen/character_detail_photo_size"
        android:layout_height="@dimen/character_detail_photo_size"
        android:id="@+id/character_img_holder"

        android:layout_margin="@dimen/big_margin"
        app:cardCornerRadius="@dimen/cardview_radius"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/character_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_baseline_person_24"

            app:tint="?colorPrimary"
            tools:ignore="ContentDescription" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:layout_marginTop="@dimen/big_margin"

        app:cardCornerRadius="@dimen/cardview_big_radius"
        app:cardElevation="@dimen/default_elevation"
        android:layout_marginBottom="-16dp"

        app:layout_constraintTop_toBottomOf="@id/character_img_holder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/character_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginBottom="@dimen/big_margin"
                android:layout_marginStart="@dimen/default_margin"
                android:textSize="24sp"
                android:textStyle="bold"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_bias="0"

                tools:text="@tools:sample/full_names"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/character_height_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginStart="@dimen/default_margin"
                android:text="@string/character_height_label"
                android:textStyle="bold"

                app:layout_constraintStart_toStartOf="@+id/character_name_tv"
                app:layout_constraintTop_toBottomOf="@id/character_name_tv" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/character_height_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="@dimen/extra_small_margin"

                app:layout_constraintStart_toEndOf="@id/character_height_label"
                app:layout_constraintTop_toTopOf="@id/character_height_label"

                tools:text="145"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/character_mass_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/character_mass_label"
                android:textStyle="bold"

                app:layout_constraintStart_toStartOf="@+id/remove"
                app:layout_constraintTop_toTopOf="@+id/character_height_label" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/character_mass_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="@dimen/extra_small_margin"

                app:layout_constraintStart_toEndOf="@id/character_mass_label"
                app:layout_constraintTop_toTopOf="@id/character_mass_label"

                tools:text="55"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/character_gender_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/character_gender_label"
                android:textStyle="bold"

                app:layout_constraintStart_toStartOf="@+id/character_mass_label"
                app:layout_constraintTop_toTopOf="@+id/character_birth_year_label" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/character_gender_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="@dimen/extra_small_margin"

                app:layout_constraintStart_toEndOf="@id/character_gender_label"
                app:layout_constraintTop_toTopOf="@id/character_gender_label"

                tools:text="Male"/>



            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/character_birth_year_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/big_margin"
                android:text="@string/character_birth_year_label"
                android:textStyle="bold"

                app:layout_constraintStart_toStartOf="@+id/character_height_label"
                app:layout_constraintTop_toBottomOf="@+id/character_height_label" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/character_birth_year_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="@dimen/extra_small_margin"

                app:layout_constraintStart_toEndOf="@id/character_birth_year_label"
                app:layout_constraintTop_toTopOf="@id/character_birth_year_label"

                tools:text="22BY3R"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/character_hair_color_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/big_margin"
                android:text="@string/character_hair_color_label"
                android:textStyle="bold"

                app:layout_constraintStart_toStartOf="@+id/character_birth_year_label"
                app:layout_constraintTop_toBottomOf="@+id/character_birth_year_label" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/character_hair_color_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="@dimen/extra_small_margin"

                app:layout_constraintStart_toEndOf="@id/character_hair_color_label"
                app:layout_constraintTop_toTopOf="@id/character_hair_color_label"

                tools:text="Blonde"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/character_skin_color_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/character_skin_color_label"
                android:textStyle="bold"

                app:layout_constraintStart_toStartOf="@+id/character_gender_label"
                app:layout_constraintTop_toTopOf="@+id/character_hair_color_label" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/character_skin_color_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="@dimen/extra_small_margin"

                app:layout_constraintStart_toEndOf="@id/character_skin_color_label"
                app:layout_constraintTop_toTopOf="@id/character_skin_color_label"

                tools:text="White"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/character_films_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/big_margin"
                android:layout_marginBottom="@dimen/default_margin"
                android:text="@string/character_films_label"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/recyclerView"


                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="@+id/character_name_tv"
                app:layout_constraintTop_toBottomOf="@+id/character_hair_color_label" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="0dp"
                android:layout_height="0dp"

                android:scrollbars="vertical"
                app:layoutManager="LinearLayoutManager"


                app:layout_constraintBottom_toTopOf="@+id/add"
                app:layout_constraintEnd_toEndOf="@+id/remove"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/character_films_label"
                tools:itemCount="5"
                tools:listitem="@layout/film_item" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_margin="@dimen/default_margin"
                android:text="@string/add_btn_label"
                app:icon="@drawable/ic_baseline_favorite_24"
                app:iconGravity="textStart"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/remove"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/remove"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_margin="@dimen/default_margin"

                android:enabled="false"
                android:text="@string/remove_btn_label"
                app:icon="@drawable/ic_baseline_delete_24"
                app:iconGravity="textStart"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/add" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>